--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.google.com/">Website</a>
+    <a class="footer-link" href="https://www.google.com/">Google</a>
     <p class="x">© 2022 Saketh Tulasi</p>
   </div>
   
